# github-leaderboard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  git-leaderboard.yml  pyproject.toml  requirements.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-github-leaderboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-leaderboard/checklists/: requirements.md
specs/001-github-leaderboard/contracts/: cli.md
src/github_leaderboard/: auth.py  cli.py  client.py  config.py  csv_grafana.py  csv_gsheet.py  csv_html.py  fetcher.py  gh_new_proj.py  gh_top.py  runner.py  scorer.py  writer.py
